# blockdevice

./: .coverage  README.md  pyproject.toml  pytest-coverage.ini  pytest.ini  requirements.txt  setup.py
.github/workflows/: publish.yml  pytest.yml
blockdevice/utils/: __init__.py  __init__.py.backup
examples/: compressed.py
examples/network/: client.py  server.py
include/: blockdevice.h
scripts/: get_version.py  print_with_lines.py  prune_wheels.py
src/: blockdevice.cpp  blockdevice_class.cpp
